--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,10 @@ dependencies {
     compile 'com.github.rey5137:material:1.2.4'
     compile 'co.lujun:androidtagview:1.1.4'
     testCompile 'junit:junit:4.12'
-    compile 'com.chaos.view:pinview:1.1.0'
-    compile project(':pocketsphinx-android-5prealpha-release')
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.android.gms:play-services-ads:10.0.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.github.davidpizarro:pinview:1.0.0'
-    compile 'com.github.pchmn:MaterialChipsInput:1.0.8'
+    compile project(':pocketsphinx-android-5prealpha-release')
+    compile 'com.code-troopers.betterpickers:library:3.1.0'
 }
