--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile project(':pocketsphinx-android-5prealpha-release')
     compile 'com.code-troopers.betterpickers:library:3.1.0'
+    compile 'com.kevalpatel2106:hiddencamera:1.3.2'
 }
