--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.bikrampandit.cliquick">
 
-    <uses-sdk tools:overrideLibrary="com.google.android.gms.ads.impl, com.google.android.gms.ads, com.google.android.gms.clearcut, com.google.android.gms.base, com.google.android.gms.tasks, com.google.android.gms.gass, com.google.android.gms, edu.cmu.pocketsphinx, com.chaos.view" />
+    <uses-sdk tools:overrideLibrary="com.androidhiddencamera, com.google.android.gms.ads.impl, com.google.android.gms.ads, com.google.android.gms.clearcut, com.google.android.gms.base, com.google.android.gms.tasks, com.google.android.gms.gass, com.google.android.gms, edu.cmu.pocketsphinx, com.chaos.view" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+
 
     <application
         android:allowBackup="true"
