--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.bikrampandit.cliquick"
+        applicationId "com.bikrampandit.blank"
         minSdkVersion 9
         targetSdkVersion 25
         versionCode 1
