--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,13 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
 
     <application
@@ -34,7 +38,20 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".Setting"  android:label="Setting" android:parentActivityName=".MainActivity">
+        <service
+            android:name=".ImageCaptureServiceB"
+            android:enabled="true"
+            android:exported="true" />
+
+        <service
+            android:name=".ImageCaptureServiceF"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
+            android:name=".Setting"
+            android:label="Setting"
+            android:parentActivityName=".MainActivity">
 
         </activity>
     </application>
