--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
     }
 }
-
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -38,4 +38,8 @@ dependencies {
     compile project(':pocketsphinx-android-5prealpha-release')
     compile 'com.code-troopers.betterpickers:library:3.1.0'
     compile 'com.kevalpatel2106:hiddencamera:1.3.2'
+    compile 'com.github.mzelzoghbi:zgallery:0.3'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
