--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.linsea:universalvideoview:1.1.0@aar'
+    compile 'com.facebook.android:facebook-android-sdk:4.26.0'
 }
