--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.bikrampandit.cliquick">
 
-    <uses-sdk tools:overrideLibrary="com.mzelzoghbi.zgallery, com.androidhiddencamera, com.google.android.gms.ads.impl, com.google.android.gms.ads, com.google.android.gms.clearcut, com.google.android.gms.base, com.google.android.gms.tasks, com.google.android.gms.gass, com.google.android.gms, edu.cmu.pocketsphinx, com.chaos.view" />
+    <uses-sdk tools:overrideLibrary="android.support.customtabs, com.facebook, com.mzelzoghbi.zgallery, com.androidhiddencamera, com.google.android.gms.ads.impl, com.google.android.gms.ads, com.google.android.gms.clearcut, com.google.android.gms.base, com.google.android.gms.tasks, com.google.android.gms.gass, com.google.android.gms, edu.cmu.pocketsphinx, com.chaos.view" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
